# RDXx5robot

./: .gitignore  README_RDXx5robot.md  check_ekf_yaw.py  check_imu_direction.py  check_lidar_direction.py  frames_2026-05-04_13.56.39.gv
digua_maps/: current_map_name.txt
digua_maps/nav2/: digua_online_20260508_174607_map.pgm  digua_online_20260508_174607_map.yaml  digua_online_20260508_213118_map.pgm  digua_online_20260508_213118_map.yaml  digua_online_20260511_222109_map.pgm  digua_online_20260511_222109_map.yaml
digua_maps/rtabmap/: digua_online_20260508_174607.db  digua_online_20260508_213118.db  digua_online_20260511_222109.db
digua_navigation_data/: named_poses.yaml
install/: local_setup.sh  setup.sh
install/astra_camera/include/astra_camera/: constants.h  dynamic_params.h  json.hpp  ob_camera_node.h  ob_camera_node_factory.h  ob_context.h  ob_timer_filter.h  ros_param_backend.h  types.h  utils.h  uvc_camera_driver.h
install/astra_camera/include/astra_camera/point_cloud_proc/: depth_traits.h  point_cloud_proc.h  point_cloud_xyz.h  point_cloud_xyzrgb.h
install/astra_camera/include/magic_enum/: magic_enum.hpp
install/astra_camera/include/openni2/: KinectProperties.h  OniCAPI.h  OniCEnums.h  OniCProperties.h  OniCTypes.h  OniEnums.h  OniPlatform.h  OniProperties.h  OniTest.h  OniVersion.h  OpenNI.h  PS1080.h  PSLink.h  PrimeSense.h  SonixCamera.h  util.h
install/astra_camera/include/openni2/Android-Arm/: OniPlatformAndroid-Arm.h
install/astra_camera/include/openni2/Driver/: OniDriverAPI.h  OniDriverTypes.h
install/astra_camera/include/openni2/Linux-Arm/: OniPlatformLinux-Arm.h
install/astra_camera/include/openni2/Linux-x86/: OniPlatformLinux-x86.h
install/astra_camera/include/openni2/MacOSX/: OniPlatformMacOSX.h
install/astra_camera/share/astra_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/astra_camera/share/astra_camera/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  astra_cameraConfig-version.cmake  astra_cameraConfig.cmake
install/astra_camera/share/astra_camera/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/astra_camera/share/astra_camera/launch/: .gitkeep  astra.launch.xml  astra_pro.launch.xml  astro_pro_plus.launch.xml  dabai_dc1.launch.xml  dabai_dcw.launch.xml  dabai_dw.launch.xml  dabai_pro.launch.xml  dabai_u3.launch.xml  deeyea.launch.xml  embedded_s.launch.xml  embedded_u3.launch.xml  gemini.launch.xml  gemini_e.launch.xml  gemini_e_lite.launch.xml  list_devices.launch.xml  multi_astra.launch.xml  multi_dabai_dcw.launch.xml  multi_dabai_pro.launch.xml  multi_deeyea.launch.xml  multi_gemini.launch.xml  (+2 more)
install/astra_camera_msgs/share/astra_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/base_control_ros2/share/base_control_ros2/: package.ps1  package.sh
install/digua_bringup/share/digua_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
models/bpu_yolov8s_oiv7/: yolov8s-oiv7_classes.txt
src/YDLidar-SDK/: CMakeLists.txt
src/YDLidar-SDK/cmake/: install_package.cmake
src/YDLidar-SDK/core/base/: thread.h
src/YDLidar-SDK/core/common/: ydlidar_help.h
src/YDLidar-SDK/examples/: CMakeLists.txt  scl_test.cpp  tri_test.cpp
src/YDLidar-SDK/src/: DTSLidarDriver.cpp  DTSLidarDriver.h  GSLidarDriver.cpp  SDMLidarDriver.cpp
src/base_control_ros2/: README_digua_verify.md  package.xml  setup.py
src/base_control_ros2/base_control_ros2/: base_control_ros2.py
src/base_control_ros2/launch/: base_control.launch.py
src/base_control_ros2/script/: move_base_udev.sh
src/digua_bringup/: CMakeLists.txt  package.xml
src/digua_bringup/config/: ekf.yaml
src/digua_bringup/launch/: bringup_real.launch.py  ekf.launch.py  lidar_x2.launch.py  rgbd_sync.launch.xml
src/digua_description/: CMakeLists.txt  package.xml
src/digua_description/launch/: display.launch.py
src/digua_description/rviz/: digua_description.rviz
src/digua_description/urdf/: digua_robot.urdf.xacro
src/digua_mapping/: CMakeLists.txt  package.xml
src/digua_mapping/launch/: rtabmap_localization.launch.py  rtabmap_online.launch.py  save_nav2_map.launch.py
src/digua_navigation/: CMakeLists.txt  package.xml
src/digua_navigation/config/: collision_monitor_params.yaml  localization_params.yaml  nav2_params.yaml  nav2_params_before_lidar_visual_merge_20260512_220653.yaml
src/digua_navigation/launch/: collision_monitor.launch.py  localization.launch.py  navigation.launch.py  navigation_launch_collision.py
src/digua_navigation/scripts/: auto_initial_pose.py  follow_named_route.py  go_to_named_pose.py  go_to_pose.py  list_named_poses.py  low_obstacle_cloud_filter.py  pointcloud2_restamp.py  save_named_pose.py  start_nav_from_home.sh  wait_for_tf.py
src/ros2_astra_camera/astra_camera/launch/: astra.launch.xml
src/ros2_astra_camera/astra_camera/src/: ob_camera_info.cpp  utils.cpp
src/ros2_astra_camera/astra_camera_msgs/: astra_camera_README.md
src/ydlidar_ros2_driver/params/: X2.yaml
src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
tools/: capture_50_images.py  check_base_serial_ttyS1.py  digua_hw_check.py
(+203 files in other folders)
