<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>digua_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch files for the Digua robot, including Astra RGB-D synchronization.</description>

  <maintainer email="3540045144@qq.com">w</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>astra_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>digua_description</exec_depend>

  <exec_depend>base_control_ros2</exec_depend>

  <exec_depend>robot_localization</exec_depend>

  <exec_depend>ydlidar_ros2_driver</exec_depend>

  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>